--- a/public/index.html
+++ b/public/index.html
@@ -169,7 +169,7 @@
                     </div>
                     <div class="w-full mb-20 md:w-1/4 lg:mx-10 md:mx-5" id="card-artikel">
                         <div class="overflow-hidden shadow-lg card-artikel">
-                            <img class="object-cover object-center w-full h-56 " src="/public/images/a-2.jpg" alt="Mountain">
+                            <img class="object-cover object-center w-full h-56 " src="/public/images/ldk.jpg" alt="Mountain">
                             <div class="px-6 py-4">
                                 <div class="mb-2 text-xl font-bold title">Event</div>
                                 <p class="text-base font-bold text-gray-700">
@@ -180,7 +180,7 @@
                     </div>
                     <div class="w-full mb-20 md:w-1/4 lg:mx-10 md:mx-5" id="card-artikel">
                         <div class="overflow-hidden shadow-lg card-artikel">
-                            <img class="object-cover object-center w-full h-56 " src="/public/images/a-2.jpg" alt="Mountain">
+                            <img class="object-cover object-center w-full h-56 " src="/public/images/25.png" alt="Mountain">
                             <div class="px-6 py-4">
                                 <div class="mb-2 text-xl font-bold title">Event</div>
                                 <p class="text-base font-bold text-gray-700">
@@ -191,7 +191,7 @@
                     </div>
                     <div class="w-full mb-20 md:w-1/4 lg:mx-10 md:mx-5" id="card-artikel">
                         <div class="overflow-hidden shadow-lg card-artikel">
-                            <img class="object-cover object-center w-full h-56 " src="/public/images/a-2.jpg" alt="Mountain">
+                            <img class="object-cover object-center w-full h-56 " src="/public/images/artikel2.png" alt="Mountain">
                             <div class="px-6 py-4">
                                 <div class="mb-2 text-xl font-bold title">Mountain</div>
                                 <p class="text-base font-bold text-gray-700">
@@ -201,8 +201,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="d-flex justify-content-end md:mb-5">
-                    <button class="px-4 py-2 font-bold text-white rounded-full md:mr-20 hover:bg-blue-700" id="btn-magazine">
+                <div class="d-flex justify-content-end">
+                    <button class="px-4 py-2 font-bold text-white rounded-full md:mb-12 md:mr-20 hover:bg-blue-700" id="btn-magazine">
                         <a href="artikel.html" class="link-light">View More</a>
                     </button>
                 </div>
@@ -224,16 +224,16 @@
         <div class="flex items-center justify-center foto">
             <div class="grid gap-16 p-5 md:mt-10 sm:mx-40 sm:px-2 sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-3">
                 <div class="w-full">
-                    <img src="/public/images/a-1.jpg" alt="" class="" id="foto-gallery">
+                    <img src="/public/images/gallery-1.jpg" alt="" class="" id="foto-gallery">
                 </div>
                 <div class="w-full">
-                    <img src="/public/images/a-1.jpg" alt="" class="" id="foto-gallery">
+                    <img src="/public/images/gallery-2.jpg" alt="" class="" id="foto-gallery">
                 </div>
                 <div class="w-full">
-                    <img src="/public/images/a-1.jpg" alt="" class="" id="foto-gallery">
+                    <img src="/public/images/gallery-3.jpg" alt="" class="" id="foto-gallery">
                 </div>
                 <div class="w-full">
-                    <img src="/public/images/a-1.jpg" alt="" class="" id="foto-gallery">
+                    <img src="/public/images/gallery-4.jpg" alt="" class="" id="foto-gallery">
                 </div>
                 <div class="w-full">
                     <img src="/public/images/a-1.jpg" alt="" class="" id="foto-gallery">
