--- a/public/index.html
+++ b/public/index.html
@@ -117,23 +117,23 @@
                 <h4>Atha</h4>
                 <p>Chief of Panorma Binus Malang</p>
             </div>
-            <div class="mt-5 row" data-aos="flip-left">
-                <div class="mb-3 text-center col-md-3 d-block">
+            <div class="mt-5 row">
+                <div class="mb-3 text-center col-md-3 d-block" data-aos="flip-left">
                     <img src="images/struktur2.png" width="178" class="mx-auto img-fluid" alt="">
                     <h4>Leonardo Wijaya</h4>
                     <p>Chief of Photography Division </p>
                 </div>
-                <div class="mb-3 text-center col-md-3 d-block">
+                <div class="mb-3 text-center col-md-3 d-block" data-aos="flip-left">
                     <img src="images/struktur3.png" width="178" class="mx-auto img-fluid" alt="">
                     <h4>Rhemzy Putra M</h4>
                     <p>Chief of Illustrator Division </p>
                 </div>
-                <div class="mb-3 text-center col-md-3 d-block">
+                <div class="mb-3 text-center col-md-3 d-block" data-aos="flip-left">
                     <img src="images/struktur4.png" width="178" class="mx-auto img-fluid" alt="">
                     <h4>Azalea Nottingham</h4>
                     <p>Chief of Reporter Division </p>
                 </div>
-                <div class="mb-3 text-center col-md-3 d-block">
+                <div class="mb-3 text-center col-md-3 d-block" data-aos="flip-left">
                     <img src="images/struktur5.png" width="178" class="mx-auto img-fluid" alt="">
                     <h4>Gloria Angela</h4>
                     <p>Chief of Social Media Division </p>
@@ -145,58 +145,59 @@
     <div class="artikel" id="artikel">
         <div class="mx-auto sm:containe artikel-bg">
             <div class="object-cover w-full min-h-screen bg-cover" style="background-image: url('/public/images/wave.png') ">
-                <div id="judul" class="mt-5 text-5xl font-bold text-white md:px-20 judul md:py-16">Whats Going On ?
+                <div id="judul" class="mt-5 text-5xl font-bold text-white md:px-20 judul md:py-16" data-aos="fade-right" data-aos-duration="1000">
+                    Whats Going On ?
                     <div class="line-custom"></div>
                 </div>
-                <div class="flex flex-col items-start p-5 md:flex-row">
-                    <div class="w-full mb-20 md:w-1/4 md:mx-5" id="card-artikel">
-                        <div class="overflow-hidden shadow-lg card-artikel">
-                            <img class="object-cover object-center w-full h-56 " src="/public/images/a-1.jpg" alt="Mountain">
-                            <div class="px-6 py-4">
-                                <div class="mb-2 text-xl font-bold title">Event</div>
-                                <p class="text-base font-bold text-gray-700">
+                <div class="flex flex-col items-start p-5 md:flex-row" data-aos="fade-up">
+                    <div class="w-full mb-20 md:w-1/4 md:mx-5" id="card-artikel ">
+                        <div class="overflow-hidden shadow-lg card-artikel ">
+                            <img class="object-cover object-center w-full h-56 " src="/public/images/a-1.jpg " alt="Mountain ">
+                            <div class="px-6 py-4 ">
+                                <div class="mb-2 text-xl font-bold title ">Event</div>
+                                <p class="text-base font-bold text-gray-700 ">
                                     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus quia.
                                 </p>
                             </div>
                         </div>
                     </div>
-                    <div class="w-full mb-20 md:w-1/4 lg:mx-10 md:mx-5" id="card-artikel">
-                        <div class="overflow-hidden shadow-lg card-artikel">
-                            <img class="object-cover object-center w-full h-56 " src="/public/images/ldk.jpg" alt="Mountain">
-                            <div class="px-6 py-4">
-                                <div class="mb-2 text-xl font-bold title">Event</div>
-                                <p class="text-base font-bold text-gray-700">
+                    <div class="w-full mb-20 md:w-1/4 lg:mx-10 md:mx-5 " id="card-artikel ">
+                        <div class="overflow-hidden shadow-lg card-artikel ">
+                            <img class="object-cover object-center w-full h-56 " src="/public/images/ldk.jpg " alt="Mountain ">
+                            <div class="px-6 py-4 ">
+                                <div class="mb-2 text-xl font-bold title ">Event</div>
+                                <p class="text-base font-bold text-gray-700 ">
                                     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus quia.
                                 </p>
                             </div>
                         </div>
                     </div>
-                    <div class="w-full mb-20 md:w-1/4 lg:mx-10 md:mx-5" id="card-artikel">
-                        <div class="overflow-hidden shadow-lg card-artikel">
-                            <img class="object-cover object-center w-full h-56 " src="/public/images/25.png" alt="Mountain">
-                            <div class="px-6 py-4">
-                                <div class="mb-2 text-xl font-bold title">Event</div>
-                                <p class="text-base font-bold text-gray-700">
+                    <div class="w-full mb-20 md:w-1/4 lg:mx-10 md:mx-5 " id="card-artikel ">
+                        <div class="overflow-hidden shadow-lg card-artikel ">
+                            <img class="object-cover object-center w-full h-56 " src="/public/images/25.png " alt="Mountain ">
+                            <div class="px-6 py-4 ">
+                                <div class="mb-2 text-xl font-bold title ">Event</div>
+                                <p class="text-base font-bold text-gray-700 ">
                                     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus quia.
                                 </p>
                             </div>
                         </div>
                     </div>
-                    <div class="w-full mb-20 md:w-1/4 lg:mx-10 md:mx-5" id="card-artikel">
-                        <div class="overflow-hidden shadow-lg card-artikel">
-                            <img class="object-cover object-center w-full h-56 " src="/public/images/artikel2.png" alt="Mountain">
-                            <div class="px-6 py-4">
-                                <div class="mb-2 text-xl font-bold title">Mountain</div>
-                                <p class="text-base font-bold text-gray-700">
+                    <div class="w-full mb-20 md:w-1/4 lg:mx-10 md:mx-5 " id="card-artikel ">
+                        <div class="overflow-hidden shadow-lg card-artikel ">
+                            <img class="object-cover object-center w-full h-56 " src="/public/images/artikel1.jpg " alt="Mountain ">
+                            <div class="px-6 py-4 ">
+                                <div class="mb-2 text-xl font-bold title ">Mountain</div>
+                                <p class="text-base font-bold text-gray-700 ">
                                     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus quia.
                                 </p>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="d-flex justify-content-end">
-                    <button class="px-4 py-2 font-bold text-white rounded-full md:mb-12 md:mr-20 hover:bg-blue-700" id="btn-magazine">
-                        <a href="artikel.html" class="link-light">View More</a>
+                <div class="d-flex justify-content-end" data-aos="fade-up">
+                    <button class="px-4 py-2 font-bold text-white rounded-full md:mb-12 md:mr-20 hover:bg-blue-700 " id="btn-magazine">
+                        <a href="artikel.html " class="link-light ">View More</a>
                     </button>
                 </div>
             </div>
@@ -206,41 +207,41 @@
 
 
     <!-- gallery -->
-    <section class="" id="gallery">
-        <!-- <div class="py-6 ml-auto bg-gallery">
+    <section class="" id="gallery ">
+        <!-- <div class="py-6 ml-auto bg-gallery ">
         </div>
-        <h1 class="flex flex-col text-5xl font-bold lg:items-end xl:py-5 gallery-header md:mr-12" id="gallery-header">
+        <h1 class="flex flex-col text-5xl font-bold lg:items-end xl:py-5 gallery-header md:mr-12 " id="gallery-header ">
             Gallery
         </h1> -->
 
-        <div class="py-6 ml-auto kata-gallery md:flex justify-items-end md:w-80">
-            <img src="images/kata-gallery.png" alt="">
-            <h1 class="font-bold sm:text-5xl gallery-header" id="gallery-header">
-                Gallery
-            </h1>
+        <div class="py-6 ml-auto kata-gallery md:flex justify-items-end md:w-80 ">
+            <img src="images/kata-gallery.png " alt=" " class="md:content">
         </div>
+        <h1 class="text-5xl font-bold gallery-header" id="gallery-header">
+            Gallery
+        </h1>
 
         <div class=" line-2"></div>
         <!-- foto -->
-        <div class="flex items-center justify-center foto">
-            <div class="grid gap-16 p-5 md:mt-10 sm:mx-40 sm:px-2 sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-3">
-                <div class="w-full">
-                    <img src="/public/images/gallery-1.jpg" alt="" class="" id="foto-gallery">
+        <div class="flex items-center justify-center mt-20 foto">
+            <div class="grid gap-16 p-5 md:mt-10 sm:mx-40 sm:px-2 sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-3" data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1500">
+                <div class="w-full ">
+                    <img src="/public/images/gallery-1.jpg " alt=" " class="object-cover object-center md:h-56" id="foto-gallery ">
+                </div>
+                <div class="w-full ">
+                    <img src="/public/images/gallery-2.jpg " alt=" " class="object-cover object-center md:h-56" id="foto-gallery ">
+                </div>
+                <div class="w-full ">
+                    <img src="/public/images/gallery-1.jpg " alt=" " class="object-cover object-center md:h-56" id="foto-gallery ">
+                </div>
+                <div class="w-full ">
+                    <img src="/public/images/gallery-2.jpg " alt=" " class="object-cover object-center md:h-56" id="foto-gallery ">
+                </div>
+                <div class="w-full ">
+                    <img src="/public/images/a-2.jpg" alt=" " class="object-cover object-center md:h-56" id="foto-gallery ">
                 </div>
                 <div class="w-full">
-                    <img src="/public/images/gallery-2.jpg" alt="" class="" id="foto-gallery">
-                </div>
-                <div class="w-full">
-                    <img src="/public/images/gallery-3.jpg" alt="" class="" id="foto-gallery">
-                </div>
-                <div class="w-full">
-                    <img src="/public/images/gallery-4.jpg" alt="" class="" id="foto-gallery">
-                </div>
-                <div class="w-full">
-                    <img src="/public/images/a-1.jpg" alt="" class="" id="foto-gallery">
-                </div>
-                <div class="w-full">
-                    <img src="/public/images/a-1.jpg" alt="" class="" id="foto-gallery">
+                    <img src="/public/images/artikel4.jpg" alt=" " class="object-cover object-center md:h-56" id="foto-gallery ">
                 </div>
             </div>
         </div>
@@ -248,38 +249,38 @@
     <!-- end -->
 
     <!-- magazine -->
-    <section class=" md:h-screen mt-72" id="magazine">
-        <h1 class="text-6xl font-bold text-center">Our Magazine</h1>
-        <div class="mt-3 ml-auto mr-auto line-3"></div>
-        <p class="mt-5 ml-auto mr-auto text-sm text-center md:max-w-xl">Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias rem dignissimos autem officiis repellat error tempora. consectetur adipisicing elit. </p>
+    <section class=" md:h-screen mt-72" id="magazine ">
+        <h1 class="text-6xl font-bold text-center ">Our Magazine</h1>
+        <div class="mt-3 ml-auto mr-auto line-3 "></div>
+        <p class="mt-5 ml-auto mr-auto text-sm text-center md:max-w-xl ">Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias rem dignissimos autem officiis repellat error tempora. consectetur adipisicing elit. </p>
         <!-- list-magazine -->
-        <div class="flex items-center justify-center foto">
+        <div class="flex items-center justify-center foto ">
             <div class="grid gap-16 p-5 md:mt-20 sm:mx-10 sm:px-2 sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-4">
-                <div class="w-full">
-                    <img src="/public/images/majalah1.png" alt="" class="object-cover object-center w-full h-72" id="list-magazine">
-                    <p class="mt-3 text-sm font-bold text-center text-black">Vol.2<br> Brand New You
+                <div class="w-full" data-aos="flip-left">
+                    <img src="/public/images/majalah1.png " alt=" " class="object-cover object-center w-full h-72 " id="list-magazine ">
+                    <p class="mt-3 text-sm font-bold text-center text-black ">Vol.2<br> Brand New You
                     </p>
                 </div>
-                <div class="w-full">
-                    <img src="/public/images/majalah2.png" alt="" class="object-cover object-center w-full h-72" id="list-magazine">
-                    <p class="mt-3 text-sm font-bold text-center text-black">Vol.3<br>Heroes
+                <div class="w-full" data-aos="flip-left">
+                    <img src="/public/images/majalah2.png " alt=" " class="object-cover object-center w-full h-72 " id="list-magazine ">
+                    <p class="mt-3 text-sm font-bold text-center text-black ">Vol.3<br>Heroes
                     </p>
                 </div>
-                <div class="w-full">
-                    <img src="/public/images/majalah3.png" alt="" class="object-cover object-center w-full h-72" id="list-magazine">
-                    <p class="mt-3 text-sm font-bold text-center text-black">Vol.4<br>A Year-End Habbit
+                <div class="w-full" data-aos="flip-left">
+                    <img src="/public/images/majalah3.png " alt=" " class="object-cover object-center w-full h-72 " id="list-magazine ">
+                    <p class="mt-3 text-sm font-bold text-center text-black ">Vol.4<br>A Year-End Habbit
                     </p>
                 </div>
-                <div class="w-full">
-                    <img src="/public/images/majalah4.png" alt="" class="object-cover object-center w-full h-72" id="list-magazine">
-                    <p class="mt-3 text-sm font-bold text-center text-black">Vol.5<br>A New Semester
+                <div class="w-full" data-aos="flip-left">
+                    <img src="/public/images/majalah4.png " alt=" " class="object-cover object-center w-full h-72 " id="list-magazine ">
+                    <p class="mt-3 text-sm font-bold text-center text-black ">Vol.5<br>A New Semester
                     </p>
                 </div>
             </div>
         </div>
-        <div class="d-flex justify-content-end md:mb-10">
-            <button class="px-4 py-2 font-bold text-white rounded-full md:mr-20 hover:bg-blue-700" id="btn-magazine">
-                <a href="magazine.html" class="link-light">View More</a>
+        <div class="d-flex justify-content-end md:mb-10" md:data-aos="zoom-in" data-aos="fade-up">
+            <button class="px-4 py-2 font-bold text-white rounded-full md:mr-20 hover:bg-blue-700 " id="btn-magazine">
+                <a href="magazine.html " class="link-light ">View More</a>
             </button>
         </div>
     </section>
@@ -326,14 +327,14 @@
     </footer>
 
     <!-- javascript -->
-    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-    <script src="/public/js/main.js"></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js "></script>
+    <script src="/public/js/main.js "></script>
     <script>
         AOS.init();
     </script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js " integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB " crossorigin="anonymous ">
     </script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js " integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13 " crossorigin="anonymous ">
     </script>
 </body>
 
